Group17RobotReal/Group17Robot.cydsn/BUILD.log
--------------- Build Started: 10/22/2019 22:57:42 Project: Group17Robot, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
The code generation step is up to date.
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
In file included from main.c:23:0:
main.c: In function 'main':
main.h:210:17: error: expected ')' before ';' token
 #define CENTRE 2;
                 ^
main.c:473:44: note: in expansion of macro 'CENTRE'
             else if (preferential_route == CENTRE) {
                                            ^
main.c:206:9: warning: unused variable 'block_and_puck_edge_midpoint' [-Wunused-variable]
     int block_and_puck_edge_midpoint = 0;
         ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 10/22/2019 22:57:42 ---------------
